fix background image scaling/cropping

--- a/src/less/image.less
+++ b/src/less/image.less
@@ -5,9 +5,13 @@ section.image-container {
   overflow: hidden;
 
   img {
-    //height: 100%;
-    width: 150%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
     object-fit: cover;
-    object-position: center;
+    min-height: 100%;
+    width: 100%;
+    height: auto;
   }
 }
